@@ -2,6 +2,8 @@ Wed Nov 23 2005  Loic Dachary  <loic@gnu.org>
 
 	* Release 1.0.13
 
+	* pokernetwork/pokerserver.py: kill obsolete tournament balancing functions
+
 	* pokernetwork/__init__.py (protocol_number): protocol changes because the
 	  server refers to new betting structures.
 
